--- a/src/app/views/dashboard/dashboard-views/dashboard-alert/dashboard-alert.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-alert/dashboard-alert.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wrapper">
   <h1>Alertas</h1>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur ducimus, perspiciatis
