--- a/src/app/views/dashboard/dashboard-views/dashboard-profile/dashboard-profile.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-profile/dashboard-profile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wrapper">
   <div class="d-flex">
     <h1>Perfil</h1>
     <button mat-flat-buttoncolor="primary">Primary</button>
