--- a/src/app/views/dashboard/dashboard-views/dashboard-profile/dashboard-profile.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-profile/dashboard-profile.component.scss
@@ -1,4 +1,8 @@
-.d-flex {
-  align-items: center;
-  justify-content: space-between;
+.wrapper {
+  margin-top: 100px;
+
+  .d-flex {
+    align-items: center;
+    justify-content: space-between;
+  }
 }
