se agrego parametros al componente de busqueda, label y placeholder

--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
@@ -1,5 +1,7 @@
 <div class="wrapper">
-  <bdc-bo-searcher></bdc-bo-searcher>
+  <bdc-bo-searcher
+    label="Buscar preguntas"
+    placeholder="¿Cómo consultar mi saldo?"></bdc-bo-searcher>
   <div class="action">
     <h1>Sinónimos de Negocio</h1>
     <button mat-flat-button color="primary" [routerLink]="['/dashboard/sinonimos/crear-sinonimo']">
