--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <bdc-bo-searcher></bdc-bo-searcher>
+  <bdc-bo-searcher label="Buscar usuarios" placeholder="Juan Peréz"></bdc-bo-searcher>
   <div class="action">
     <h1>Usuarios</h1>
     <div>
