--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -1,5 +1,8 @@
 <section class="">
-  <bdc-bo-searcher (search)="handleSearch($event)"></bdc-bo-searcher>
+  <bdc-bo-searcher
+    label="Buscar preguntas"
+    placeholder="¿Cómo consultar mi saldo?"
+    (search)="handleSearch($event)"></bdc-bo-searcher>
 </section>
 
 <ng-container *ngIf="questions$ | async as questions">
