--- a/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.scss
@@ -43,6 +43,39 @@
   mat-divider {
     margin: 32px 0;
   }
+  mat-button-toggle-group {
+    width: fit-content;
+    border-radius: 8px;
+    border: 1px solid #939394;
+
+    &[aria-label='rol'] {
+      min-width: 412px;
+    }
+    &[aria-label='state'] {
+      min-width: 275px;
+    }
+
+    mat-button-toggle {
+      width: 100%;
+      border: 0.5px solid #939394;
+      font-size: 14px;
+      font-weight: 500;
+      color: #42474e;
+      &:first-child {
+        border-radius: 8px 0 0 8px;
+      }
+      &:last-child {
+        border-radius: 0 8px 8px 0;
+      }
+
+      span {
+        display: none;
+        opacity: 0;
+        color: #344b64;
+        transition: opacity 0.3s ease-out;
+      }
+    }
+  }
   .form-buttons {
     width: 100%;
     display: flex;
@@ -53,7 +86,15 @@
       padding: 10px 24px 10px 24px;
     }
   }
-  .chip-area {
-    margin-left: 10px;
+}
+
+.mat-button-toggle-checked {
+  background-color: #8bb4b4;
+  color: #344b64 !important;
+  transition: background-color 0.2s ease-in;
+
+  #icon-toggle {
+    display: inline-block;
+    opacity: 1;
   }
 }
