modificaciones en el search, modificacion de arquitectura, inicio de maquetacion de metricas

--- a/src/app/views/dashboard/dashboard-views/dashboard-metrics/dashboard-metrics.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-metrics/dashboard-metrics.component.scss
@@ -1,8 +1,15 @@
 .wrapper {
   margin-top: 100px;
-
-  .d-flex {
+  .filter {
+    width: 100%;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
+    bdc-bo-searcher {
+      width: 552px;
+    }
+    mat-form-field {
+      margin-left: 24px;
+    }
   }
 }
