--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
@@ -1,7 +1,5 @@
 <div class="wrapper">
-  <bdc-bo-searcher
-    label="Buscar preguntas"
-    placeholder="¿Cómo consultar mi saldo?"></bdc-bo-searcher>
+  <bdc-bo-searcher label="Buscar Sinonimos" placeholder="Problemas de señal"></bdc-bo-searcher>
   <div class="action">
     <h1>Sinónimos de Negocio</h1>
     <button mat-flat-button color="primary" [routerLink]="['/dashboard/sinonimos/crear-sinonimo']">
