--- a/src/app/views/dashboard/dashboard-views/dashboard-metrics/dashboard-metrics.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-metrics/dashboard-metrics.component.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  margin-left: 4px;
   margin-top: 100px;
   .filter {
     width: 100%;
@@ -10,6 +11,60 @@
     }
     mat-form-field {
       margin-left: 24px;
+    }
+  }
+  .container-reference {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-evenly;
+    .item {
+      display: flex;
+      align-items: center;
+      .circle {
+        border-radius: 50%;
+        width: 12px;
+        height: 12px;
+        margin-right: 10px;
+      }
+      p {
+        font-size: 14px;
+        color: rgba(0, 0, 0, 0.6);
+      }
+    }
+  }
+  .container-card {
+    margin: 70px 0;
+    display: flex;
+    justify-content: space-evenly;
+    .card {
+      max-width: 360px;
+      width: 100%;
+      min-height: 167px;
+      border-radius: 8px;
+      box-shadow: 0px 1.85px 6.25px 0px #00000030, 0px 0.5px 1.75px 0px #0000000a;
+      text-align: center;
+      p {
+        font-size: 14px;
+        color: rgba(0, 0, 0, 0.6);
+      }
+      p:last-child {
+        font-size: 11px;
+      }
+      .content-value {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        p {
+          font-size: 40px;
+          margin: 10px 0;
+        }
+      }
+    }
+    .card:first-child {
+      margin-right: 24px;
+    }
+    .card:nth-child(2) {
+      margin-right: 24px;
     }
   }
 }
