--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -26,7 +26,7 @@
             <mat-icon svgIcon="filter"></mat-icon>
             Filtros
           </button>
-          <bdc-bo-menu-filter *ngIf="isOpen"></bdc-bo-menu-filter>
+          <bdc-bo-menu-filter *ngIf="isOpen" (closeMenuEmmiter)="toggleMenu()"></bdc-bo-menu-filter>
         </div>
         <button
           mat-flat-button
