--- a/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
@@ -1,12 +1,33 @@
 .wrapper {
   background-color: white;
-  box-shadow: 0px 4px 4px 0px #00000040;
+  box-shadow: 0px 4px 10px 3px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
-  padding: 30px 20px;
+  padding: 32px 20px;
   width: 380px;
   display: flex;
   flex-direction: column;
   .action {
     align-self: flex-end;
+
+    button:first-child {
+      margin-right: 20px;
+    }
+  }
+  .date-p {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 16px;
+  }
+  mat-form-field {
+    margin-bottom: 16px;
+    color: #73777f;
+    input {
+      font-size: 16px;
+      color: #79747e;
+    }
+  }
+  mat-hint {
+    font-size: 12px;
+    color: #73777f;
   }
 }
