--- a/src/assets/sass/utilities.scss
+++ b/src/assets/sass/utilities.scss
@@ -14,6 +14,10 @@
 .mat-mdc-menu-panel.mat-mdc-menu-panel {
   max-width: 100% !important;
 }
+.mat-mdc-select-value {
+  font-size: 16px;
+  color: #79747e !important;
+}
 
 // tabs text color
 
