--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
@@ -11,7 +11,7 @@
     <h5>Respuesta AI</h5>
     <p>Ingresá el contenido que aparecerá en canales de inteligencia artificial.</p>
     <mat-form-field [appearance]="'outline'">
-      <textarea matInput></textarea>
+      <textarea [(ngModel)]="answersIA" matInput></textarea>
     </mat-form-field>
   </div>
   <div class="action">
