--- a/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.html
@@ -32,7 +32,8 @@
     </mat-select>
   </mat-form-field>
   <div class="action">
-    <button mat-button color="primary" (click)="deleteFilters()">Borrar filtros</button>
+    <!-- <button mat-button color="primary" (click)="deleteFilters()">Borrar filtros</button> -->
+    <button mat-button color="primary">Borrar filtros</button>
     <button mat-flat-button color="primary">Aplicar</button>
   </div>
 </div>
