--- a/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
@@ -29,12 +29,13 @@
     mat-select {
       text-transform: capitalize;
     }
-    mat-label {
-      border-right: 5px solid #fff;
-      position: relative;
-      z-index: 200000;
-      background-color: #fff;
-    }
+    // parche float label
+    // mat-label {
+    //   border-right: 5px solid #fff;
+    //   position: relative;
+    //   z-index: 200000;
+    //   background-color: #fff;
+    // }
   }
   mat-hint {
     font-size: 12px;
