--- a/src/assets/sass/utilities.scss
+++ b/src/assets/sass/utilities.scss
@@ -18,9 +18,10 @@
   font-size: 16px;
   color: #79747e !important;
 }
-.mdc-text-field--outlined .mdc-floating-label {
-  min-width: fit-content !important;
-}
+// parche float label
+// .mdc-text-field--outlined .mdc-floating-label {
+//   min-width: fit-content !important;
+// }
 
 // tabs text color
 
