eliminar sinonimo y categoria

--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
@@ -23,7 +23,7 @@
               <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="deleteSynonyms(element.id, element.name)">
+              <button mat-menu-item (click)="deleteSynonymous(element.id, element.word)">
                 <span>Eliminar</span>
               </button>
               <button mat-menu-item (click)="editSynonyms(element.id)">
