--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/dashboard-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/dashboard-categories.component.html
@@ -1,5 +1,8 @@
 <div class="wrapper">
-  <bdc-bo-searcher label="Buscar categorias" placeholder="Celular..."></bdc-bo-searcher>
+  <bdc-bo-searcher
+    label="Buscar categorias"
+    placeholder="Celular..."
+    (search)="handleSearch($event)"></bdc-bo-searcher>
   <div class="action">
     <h1>Categorías</h1>
     <button
