--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
@@ -51,7 +51,7 @@
         mat-flat-button
         type="submit"
         color="primary"
-        (click)="sendSynonymEdition()"
+        (click)="createNewSynonyms()"
         [disabled]="form.invalid">
         Crear sinónimo
       </button>
