--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
@@ -1,70 +1,59 @@
-<ng-container *ngIf="synonymId$ | async as synonym">
-  <div class="wrapper">
-    <div class="action">
-      <bdc-bo-back-arrow-button [routeMap]="'/dashboard/sinonimos'"></bdc-bo-back-arrow-button>
-      <h1>Editar Sinónimo de Negocio</h1>
-    </div>
-    <form [formGroup]="form" class="edit-synonyms-form">
-      <mat-form-field class="origen-form-field" appearance="outline" hideRequiredMarker>
-        <mat-label>Origen</mat-label>
-        <input
-          matInput
-          formControlName="synonymName"
-          type="text"
-          [(ngModel)]="synonym.word"
-          placeholder="Nombre de original" />
-        <mat-error *ngIf="form.controls['synonymName']"
-          >Se requiere un nombre de sinonimo</mat-error
-        >
-        <mat-hint>Ítem al cual se asignarán sinónimos de negocio.</mat-hint>
-      </mat-form-field>
-      <mat-form-field
-        class="synonyms-input-area"
-        appearance="outline"
-        formControlName="synonymList"
-        hideRequiredMarker
-        aria-required>
-        <mat-label>Listado de Sinonimos</mat-label>
-        <mat-chip-grid
-          #chipGrid
-          aria-label="Enter synonyms"
-          class="synonyms-input-area"
-          formControlName="synonymList">
-          <mat-chip-row
-            *ngFor="let item of synonym.synonyms"
-            (removed)="remove(item)"
-            [editable]="true"
-            (edited)="edit(item, $event)"
-            [attr.aria-description]="'Presiona enter para editar ' + item.synonym">
-            <p>{{ item.synonym }}</p>
-            <button matChipRemove [attr.aria-label]="'Eliminar ' + item.name">
-              <mat-icon>cancel</mat-icon>
-            </button>
-          </mat-chip-row>
-          <input
-            placeholder="Nuevo sinonimo..."
-            [matChipInputFor]="chipGrid"
-            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-            [matChipInputAddOnBlur]="addOnBlur"
-            (matChipInputTokenEnd)="add($event)" />
-        </mat-chip-grid>
-        <mat-error *ngIf="form.controls['synonymList'].errors"
-          >Se requiere al menos un sinonimo</mat-error
-        >
-        <mat-hint>Ingresá una palabra o frase, seguido de tecla ENTER.</mat-hint>
-      </mat-form-field>
-
-      <div class="forms-buttons">
-        <button mat-button color="primary" [routerLink]="'/dashboard/sinonimos'">Cancelar</button>
-        <button
-          mat-flat-button
-          type="submit"
-          color="primary"
-          (click)="sendSynonymEdition()"
-          [disabled]="form.invalid">
-          Guardar cambios
-        </button>
-      </div>
-    </form>
+<!-- <ng-container *ngIf="synonymId$ | async as synonym"> -->
+<div class="wrapper">
+  <div class="action">
+    <bdc-bo-back-arrow-button [routeMap]="'/dashboard/sinonimos'"></bdc-bo-back-arrow-button>
+    <h1>Editar Sinónimo de Negocio</h1>
   </div>
-</ng-container>
+  <form [formGroup]="form" class="edit-synonyms-form">
+    <mat-form-field class="origen-form-field" appearance="outline" hideRequiredMarker>
+      <mat-label>Origen</mat-label>
+      <input matInput formControlName="synonymName" type="text" placeholder="Nombre de original" />
+      <mat-error *ngIf="form.controls['synonymName']">Se requiere un nombre de sinonimo</mat-error>
+      <mat-hint>Ítem al cual se asignarán sinónimos de negocio.</mat-hint>
+    </mat-form-field>
+    <mat-form-field
+      class="synonyms-input-area"
+      appearance="outline"
+      formControlName="synonymList"
+      hideRequiredMarker
+      aria-required>
+      <mat-label>Listado de Sinónimos</mat-label>
+      <mat-chip-grid #chipGrid aria-label="Enter synonyms" class="synonyms-input-area">
+        <mat-chip-row
+          *ngFor="let item of form.get('synonymList')?.value; let i = index"
+          (removed)="remove(item)"
+          [editable]="true"
+          (edited)="edit(item, $event)"
+          [attr.aria-description]="'Presiona enter para editar ' + item.synonym">
+          <p>{{ item }}</p>
+          <button matChipRemove (click)="remove(item)">
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip-row>
+        <input
+          placeholder="Nuevo sinónimo..."
+          [matChipInputFor]="chipGrid"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          [matChipInputAddOnBlur]="addOnBlur"
+          (matChipInputTokenEnd)="add($event)" />
+      </mat-chip-grid>
+      <mat-error *ngIf="form.controls['synonymList'].errors"
+        >Se requiere al menos un sinónimo</mat-error
+      >
+      <mat-hint>Ingresá una palabra o frase, seguido de tecla ENTER.</mat-hint>
+    </mat-form-field>
+
+    <div class="forms-buttons">
+      <button mat-button color="primary" [routerLink]="'/dashboard/sinonimos'">Cancelar</button>
+      <button
+        mat-flat-button
+        type="submit"
+        color="primary"
+        (click)="sendSynonymEdition()"
+        [disabled]="form.invalid">
+        Guardar cambios
+      </button>
+    </div>
+  </form>
+</div>
+<!-- </ng-container> -->
