add ng-template matMenuContent as parent of menu-filter component

--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -27,7 +27,9 @@
             Filtros
           </button>
           <mat-menu #menu="matMenu" xPosition="before">
-            <bdc-bo-menu-filter (click)="$event.stopPropagation()"></bdc-bo-menu-filter>
+            <ng-template matMenuContent>
+              <bdc-bo-menu-filter (click)="$event.stopPropagation()"></bdc-bo-menu-filter>
+            </ng-template>
           </mat-menu>
         </div>
         <button
