--- a/src/assets/sass/utilities.scss
+++ b/src/assets/sass/utilities.scss
@@ -14,14 +14,13 @@
 .mat-mdc-menu-panel.mat-mdc-menu-panel {
   max-width: 100% !important;
 }
+.mat-mdc-menu-content {
+  padding: 0 !important;
+}
 .mat-mdc-select-value {
   font-size: 16px;
   color: #79747e !important;
 }
-// parche float label
-// .mdc-text-field--outlined .mdc-floating-label {
-//   min-width: fit-content !important;
-// }
 
 // tabs text color
 
