--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.scss
@@ -9,3 +9,9 @@
     }
   }
 }
+// overwrites material
+::ng-deep {
+  .mat-mdc-menu-panel.mat-mdc-menu-panel {
+    max-width: 100% !important;
+  }
+}
