--- a/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
@@ -1,16 +1,13 @@
 .wrapper {
-  background-color: white;
-  box-shadow: 0px 4px 10px 3px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   padding: 32px 20px;
   width: 380px;
   form {
     width: 100%;
-    display: flex;
-    flex-direction: column;
   }
   .action {
-    align-self: flex-end;
+    display: flex;
+    justify-content: end;
 
     button:first-child {
       margin-right: 20px;
