--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/dialog-confirm-deletion/dialog-confirm-deletion.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/dialog-confirm-deletion/dialog-confirm-deletion.component.html
@@ -7,7 +7,7 @@
     eliminación.
   </p>
   <div mat-dialog-actions class="action">
-    <button mat-button color="primary" cdkFocusInitial mat-dialog-close>
+    <button mat-button color="primary" (click)="forceDelete()" cdkFocusInitial mat-dialog-close>
       Eliminar de todos modos
     </button>
     <button mat-button color="primary" mat-dialog-close>Volver atrás</button>
