--- a/src/app/views/dashboard/dashboard-views/dashboard-metrics/metrics-table/metrics-table.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-metrics/metrics-table/metrics-table.component.html
@@ -14,8 +14,8 @@
     <ng-container matColumnDef="state">
       <th mat-header-cell *matHeaderCellDef>Estado actual</th>
       <td mat-cell *matCellDef="let element">
-        <bdc-bo-status-question-button [class]="element.status.class" [name]="element.status.name">
-        </bdc-bo-status-question-button>
+        <bdc-bo-status-button [class]="element.status.class" [name]="element.status.name">
+        </bdc-bo-status-button>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
