--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -26,8 +26,8 @@
       <ng-container matColumnDef="state">
         <th mat-header-cell *matHeaderCellDef>Estado</th>
         <td mat-cell *matCellDef="let element">
-          <bdc-bo-status-question-button [class]="element.status.code" [name]="element.status.name">
-          </bdc-bo-status-question-button>
+          <bdc-bo-status-button [class]="element.status.code" [name]="element.status.name">
+          </bdc-bo-status-button>
         </td>
       </ng-container>
 
