add logo svg and update in login html

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngLet="isLogginIn$ | async as isLogginIn">
   <div class="container">
     <form [formGroup]="form" class="form">
-      <img src="../../../assets/img/logo.png" alt="logo-base-de-conocimiento" />
+      <img src="../../../assets/svg/attenbase-logo.svg" alt="logo-base-de-conocimiento" />
       <p>Iniciar sesión</p>
       <mat-form-field appearance="outline">
         <mat-label>Correo electrónico</mat-label>
