avances de multiselect

--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/date/date.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/date/date.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form">
+<!-- <form [formGroup]="form">
   <div class="wrapper">
     <div class="container-date">
       <p>Fecha de publicación y vencimiento</p>
@@ -38,10 +38,10 @@
           formControlName="hourFrom"
           [period]="'Desde'"
           formControlName="hour"></bdc-bo-hour-picker>
-        <!-- <bdc-bo-hour-picker
+         <bdc-bo-hour-picker
           formControlName="hourTo"
           [period]="'Hasta'"
-          formControlName="hour"></bdc-bo-hour-picker> -->
+          formControlName="hour"></bdc-bo-hour-picker> 
       </div>
     </div>
   </div>
@@ -55,4 +55,4 @@
       Continuar
     </button>
   </div>
-</form>
+</form> -->
