--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/metadata-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/metadata-question/metadata-question.component.html
@@ -76,22 +76,8 @@
         </mat-select>
       </mat-form-field>
     </div>
-    <div class="multiselect">
-      <mat-form-field appearance="outline">
-        <mat-label>Preguntas Relacionadas</mat-label>
-        <input type="text" matInput />
-        <mat-hint *ngIf="!open"> Otras preguntas vinculadas la pregunta creada.</mat-hint>
-      </mat-form-field>
-      <ng-container *ngIf="open">
-        <div [ngClass]="{ openMenu: open }" class="menu">
-          <mat-checkbox formControlName="pepperoni">Pepperoni</mat-checkbox>
-          <mat-checkbox color="secondary" formControlName="extracheese">Extra Cheese</mat-checkbox>
-          <mat-checkbox color="primary" formControlName="mushroom">Mushroom</mat-checkbox>
-        </div>
-      </ng-container>
-    </div>
-    <button (click)="toggleMenu()">abrir</button>
   </form>
+  <bdc-bo-multiselect></bdc-bo-multiselect>
   <div class="action">
     <button
       mat-flat-button
